--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   class="btn-close btn-close-white"
                   data-bs-dismiss="offcanvas"
                   aria-label="Close"
-                ></button>
+                > <img src="./assets/img/cross.png" alt=""> </button>
               </div>
               <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
                 <ul class="navbar-nav">
@@ -117,71 +117,6 @@
           <!-- /.container -->
         </nav>
         <!-- /.navbar -->
-        <div
-          class="offcanvas offcanvas-end text-inverse"
-          id="offcanvas-info"
-          data-bs-scroll="true"
-        >
-          <div class="offcanvas-header">
-            <h3 class="text-white fs-30 mb-0">Suraksha</h3>
-            <button
-              type="button"
-              class="btn-close btn-close-white"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body pb-6">
-            <div class="widget mb-8">
-              <p>
-                Sandbox is a multipurpose HTML5 template with various layouts
-                which will be a great solution for your business.
-              </p>
-            </div>
-            <!-- /.widget -->
-            <div class="widget mb-8">
-              <h4 class="widget-title text-white mb-3">Contact Info</h4>
-              <address>
-                Moonshine St. 14/05 <br />
-                Light City, London
-              </address>
-              <a
-                href="cdn-cgi/l/email-protection.html#1f79766d6c6b31737e6c6b5f7a727e7673317c7072"
-                ><span
-                  class="__cf_email__"
-                  data-cfemail="bcd5d2dad3fcd9d1ddd5d092dfd3d1"
-                  >[email&#160;protected]</span
-                ></a
-              ><br />
-              00 (123) 456 78 90
-            </div>
-            <!-- /.widget -->
-            <div class="widget mb-8">
-              <h4 class="widget-title text-white mb-3">Learn More</h4>
-              <ul class="list-unstyled">
-                <li><a href="#">Our Story</a></li>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <!-- /.widget -->
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Follow Us</h4>
-              <nav class="nav social social-white">
-                <a href="#"><i class="uil uil-twitter"></i></a>
-                <a href="#"><i class="uil uil-facebook-f"></i></a>
-                <a href="#"><i class="uil uil-dribbble"></i></a>
-                <a href="#"><i class="uil uil-instagram"></i></a>
-                <a href="#"><i class="uil uil-youtube"></i></a>
-              </nav>
-              <!-- /.social -->
-            </div>
-            <!-- /.widget -->
-          </div>
-          <!-- /.offcanvas-body -->
-        </div>
-        <!-- /.offcanvas -->
       </header>
       <!-- /header -->
       <section
