--- a/index.html
+++ b/index.html
@@ -524,8 +524,7 @@
                     <h4 class="fs-20">Quick Sign Up
                     </h4>
                     <p class="mb-0 px-xl-7">
-                      Nulla vitae elit libero, a pharetra augue. Donec id elit
-                      non mi porta gravida at eget metus.
+                      Effortlessly join Suraksha with a streamlined registration process, enabling swift access to its safety features.
                     </p>
                   </div>
                   <!-- /div -->
