--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
               <div class="newsletter-wrapper">
                 <!-- Begin Mailchimp Signup Form -->
                 <div id="mc_embed_signup2">
-                  <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+                  <form action="#" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
                     <div id="mc_embed_signup_scroll2">
                       <div class="mc-field-group input-group form-floating">
                         <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
